[package]
name = "rawmsr"
version = "0.1.0"
edition = "2021"
description = "A raw access tool for USB Mass Storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
rusb = "0.9.1"
usb-ids = "0.2.4"
